# libmtx

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
libmtx/: assembly.c  assembly.h  blas.c  blas.h  error.c  error.h  field.c  field.h  format.c  header.c  header.h  index_set.c  index_set.h  io.c  libmtx-config.h.in  libmtx.h  libmtx.pc.in  matrix.c  matrix_array.c  matrix_array.h  matrix_coordinate.c  matrix_coordinate.h  mpi.c  mpi.h  mtx.c  mtx.h  parse.c  precision.c  precision.h  reorder.c  reorder.h  sort.c  submatrix.c  superlu_dist.c  superlu_dist.h  transpose.c  triangle.c  vector.c  vector_array.c  vector_array.h  (+4 more)
libmtx/linalg/: field.c  field.h  gemvoverlap.c  gemvoverlap.h  partition.c  partition.h  precision.c  precision.h  symmetry.c  symmetry.h  transpose.c  transpose.h
libmtx/linalg/base/: coo.c  coo.h  csr.c  csr.h  dense.c  dense.h  vector.c  vector.h
libmtx/linalg/blas/: dense.c  dense.h  vector.c  vector.h
libmtx/linalg/local/: matrix.c  matrix.h  vector.c  vector.h
libmtx/linalg/mpi/: matrix.c  matrix.h  vector.c  vector.h
libmtx/linalg/null/: coo.c  coo.h  vector.c  vector.h
libmtx/linalg/omp/: csr.c  csr.h  vector.c  vector.h
libmtx/matrix/: array.c  array.h  blas.c  blas.h  coordinate.c  coordinate.h  dense.c  dense.h  dist.c  dist.h  distmatrix.c  distmatrix.h  distmatrixgemv.c  distmatrixgemv.h  gemvoverlap.c  gemvoverlap.h  matrix.c  matrix.h  matrix_array.c  matrix_array.h  matrix_coordinate.c  matrix_coordinate.h  matrix_csr.c  matrix_csr.h  partition.c  partition.h  symmetry.c  symmetry.h  transpose.c  transpose.h
libmtx/matrix/array/: array.c  array.h  blas.c  blas.h  data.c  data.h  io.c  io.h  mpi.c  mpi.h  reorder.c  reorder.h  sort.c  sort.h
libmtx/matrix/base/: coo.c  coo.h  csr.c  csr.h  dense.c  dense.h
libmtx/matrix/blas/: dense.c  dense.h
libmtx/matrix/coordinate/: blas.c  blas.h  coordinate.c  coordinate.h  data.c  data.h  io.c  io.h  mpi.c  mpi.h  reorder.c  reorder.h  sort.c  sort.h
libmtx/matrix/null/: coo.c  coo.h
libmtx/matrix/omp/: csr.c  csr.h
libmtx/mtx/: assembly.c  assembly.h  blas.c  blas.h  cg.c  cg.h  header.c  header.h  io.c  io.h  matrix.c  matrix.h  mpi.c  mpi.h  mtx.c  mtx.h  precision.c  precision.h  reorder.c  reorder.h  sort.c  sort.h  submatrix.c  submatrix.h  superlu_dist.c  superlu_dist.h  transpose.c  transpose.h  triangle.c  triangle.h  vector.c  vector.h
libmtx/mtxdistfile/: data.c  data.h  mtxdistfile.c  mtxdistfile.h
libmtx/mtxfile/: comments.c  comments.h  coordinate.h  data.c  data.h  header.c  header.h  mtxdistfile.c  mtxdistfile.h  mtxdistfile2.c  mtxdistfile2.h  mtxfile.c  mtxfile.h  size.c  size.h
libmtx/solver/: cg.c  cg.h
libmtx/util/: cuthill_mckee.c  cuthill_mckee.h  distpartition.c  distpartition.h  field.c  field.h  fmtspec.c  fmtspec.h  format.c  format.h  index_set.c  index_set.h  io.c  io.h  merge.c  merge.h  metis.c  metis.h  morton.c  morton.h  mpipartition.c  mpipartition.h  mpisort.c  mpisort.h  parse.c  parse.h  partition.c  partition.h  permute.c  permute.h  scotch.c  scotch.h  sort.c  sort.h  symmetry.c  transpose.c  transpose.h
libmtx/vector/: array.c  array.h  base.c  base.h  blas.c  blas.h  coordinate.c  coordinate.h  dist.c  dist.h  distvector.c  distvector.h  field.c  field.h  null.c  null.h  omp.c  omp.h  packed.c  packed.h  precision.c  precision.h  vector.c  vector.h  vector_array.c  vector_array.h  vector_coordinate.c  vector_coordinate.h  vector_distributed.h
libmtx/vector/array/: array.c  array.h  blas.c  blas.h  data.c  data.h  io.c  io.h  reorder.c  reorder.h
libmtx/vector/coordinate/: blas.c  blas.h  coordinate.c  coordinate.h  data.c  data.h  io.c  io.h  reorder.c  reorder.h
m4/: ax_lib_scotch.m4  ax_libpng.m4  ax_openblas.m4  ax_superlu_dist.m4
manual/: c_library_reference.texi  commands.texi  distributed_matrices_and_vectors.texi  distributed_matrix_market_files.texi  installing.texi  introduction.texi  libmatrixmarket.info  libmtx.texi  matrices_and_vectors.texi  matrix_market_file_format.texi  matrix_market_files.texi  matrix_market_format.texi  matrix_market_objects.texi  references.texi  reporting_bugs.texi  stamp-vti  texinfo.css  version.texi
manual/image/: partition.eps  webbase-1M.eps  webbase-1M_rcm.eps
matrixmarket/: blas.c  blas.h  error.c  error.h  format.c  format.h  header.c  header.h  index_set.c  index_set.h  io.c  io.h  libmtx-config.h.in  libmtx.pc.in  matrix.c  matrix.h  matrix_array.c  matrix_array.h  matrix_coordinate.c  matrix_coordinate.h  matrixmarket.h  mpi.c  mpi.h  mtx.c  mtx.h  parse.c  parse.h  reorder.c  reorder.h  sort.c  submatrix.c  superlu_dist.c  superlu_dist.h  transpose.c  vector.c  vector.h  vector_array.c  vector_array.h  vector_coordinate.c  vector_coordinate.h  (+2 more)
src/: ioutil.c  ioutil.h  mtxaxpy.c  mtxcg.c  mtxdot.c  mtxgather.c  mtxgemm.c  mtxgemv.c  mtxinfo.c  mtxlusolve.c  mtxnrm2.c  mtxpartition.c  mtxrand.c  mtxreorder.c  mtxscal.c  mtxscatter.c  mtxsort.c  mtxsplit.c  mtxspy.c  mtxtranspose.c  parse.c  parse.h
tests/: test.h  test_assumedpartition.c  test_assumedpartition_parallel  test_distpartition.c  test_distpartition_parallel  test_distsort.c  test_distsort_parallel  test_fmtspec.c  test_format.c  test_index_set.c  test_merge.c  test_morton.c  test_mtx.c  test_mtx_blas.c  test_mtx_cg.c  test_mtx_io.c  test_mtx_matrix_array.c  test_mtx_matrix_coordinate.c  test_mtx_mpi.c  test_mtx_mpi_parallel  test_mtx_reorder.c  test_mtx_sort.c  test_mtx_transpose.c  test_mtxbasecoo.c  test_mtxbasecsr.c  test_mtxbasedense.c  test_mtxbasevector.c  test_mtxblasdense.c  test_mtxblasvector.c  test_mtxcg.c  test_mtxdistfile.c  test_mtxdistfile2.c  test_mtxdistfile2_parallel  test_mtxdistfile_parallel  test_mtxdistmatrix.c  test_mtxdistmatrix_parallel  test_mtxdistmatrixgemv.c  test_mtxdistmatrixgemv_parallel  test_mtxdistvector.c  test_mtxdistvector_array.c  (+41 more)
